style.css
body {
    width: 100%;
    height: 100%;
    margin: 0%;
    padding: 0%;
    background: rgb(5, 13, 19);
	background-size: cover;
    font-family: 'Josefin Sans', sans-serif;
    color: white;
    font-weight: bolder;
    text-align: center;
    align-items: center;
}

html {
    height: 100%;
    margin: 0%;
}
   
/* background image for homepage that only covers half the screen */
.bg {
    background-image: url("stars-1837306_1920.jpg");
    height: 50%; 
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

/* top half of home page with animated pic and nav bar */
.bg .container {
    padding-top: 0.5rem;
}

.container .heading {
    margin-left: 45%;
    margin-top: 25%;
    font-family: 'Josefin Sans', sans-serif;
    text-shadow: 1px 1px 2px rgb(168, 101, 205), 0 0 1em rgb(213, 96, 224), 0 0 0.2em rgb(139, 52, 151);
    font-size: 52px;
    font-weight: 800;
    color: aliceblue;
}

/* navigation bar for home page */
nav {
    overflow: hidden;
    margin-top: 5%;
    margin-left: 45%;
    align-items: center;
    text-align: center;
    font-weight: 800;;
}

nav a {
    float: center;
    color: white;
    padding: 10px 15px;
    font-stretch: semi-condensed;
    text-decoration: none;
    text-align: center;
}

nav a:hover{
    color: black;
    background-color: #6191a1;
}

.bg .center {
    margin-left: 40%;
    margin-top: 20%;
    position: absolute;
    transform: translate(-100%, -100%);
    width: 300px;
    height: 300px;
    box-sizing: border-box;
}

/* animated image with code from MarioDesigns on https://codepen.io/MarioDesigns/pen/woJgeo */
.floatingImage {
	overflow: hidden;
	width: 60%;
    height: 60%;
    box-sizing: border-box;
    border: 6px rgb(101, 68, 177);
    border-radius: 50%;
    box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.6);
    transform: translatey(0px);
    animation: float 10s ease-in-out infinite;
}

img {
	width: 100%;
    height: 80%
}

.secondHeader {
    text-align: left;
    margin-left: 25%;
    margin-right: 25%;
    margin-top: 5%;
    font-family: 'Josefin Sans', sans-serif;
    font-weight: 800;
    text-shadow: 1px 1px 2px rgb(168, 101, 205), 0 0 1em rgb(213, 96, 224), 0 0 0.2em rgb(139, 52, 151);
}

.par {
    text-align: left;
    margin-left: 25%;
    margin-right: 25%;
    margin-top: 5%;
    font-family: 'Josefin Sans', sans-serif;
}

@keyframes float {
	0% {
		box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
		transform: translatey(0px);
	}
	50% {
		box-shadow: 0 25px 15px 0px rgba(0,0,0,0.2);
		transform: translatey(-20px);
	}
	100% {
		box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
		transform: translatey(0px);
	}
}

